[package]
name = "rustcanvas"
version = "0.1.0"
authors = ["LongYinan <lynweklm@gmail.com>"]

[dependencies]
app_units = "0.6"
azure = "0.28"
cssparser = { version = "0.23", features = ["serde"] }
euclid = { version = "0.17", features = ["serde"] }
font-loader = "0.6"
gleam = "0.4"
lyon_path = "0.10"
num-traits = "0.1"
pathfinder_font_renderer = { git = "https://github.com/rust-canvas/pathfinder", branch = "rust-canvas", features = ["freetype-backend"] }
serde = "1.0"
serde_derive = "1.0"
glutin = "0.13"
servo-skia = "0.30000013.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.5.1", features = ["mac_os_10_8_features"] }
cgl = "0.2"
io-surface = "0.9"

[dev-dependencies]
image = "^0.18"
