[package]
name = "rustcanvas"
version = "0.1.0"
authors = ["LongYinan <lynweklm@gmail.com>"]

[dependencies]
app_units = "0.6"
cairo-rs = { path = "../cairo", features = ["png"] }
cssparser = { version = "0.23", features = ["serde"] }
euclid = { version = "0.17", features = ["serde"] }
font-loader = "0.6"
lyon_path = "0.10"
num-traits = "0.1"
pathfinder_font_renderer = { version = "0.3", git = "https://github.com/rust-canvas/pathfinder", branch = "rust-canvas", features = ["freetype-backend"] }
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
image = "^0.18"
